# rag-forge

./: Makefile  README.md  pyproject.toml
docs/: case-study.md  sample-benchmark.md  sample-regression-gate.json  sample-regression-gate.md  verification.md
rag_forge/: bench.py  cli.py  embed.py  evaluate.py  gate.py  report.py  rerank.py  retrieve.py
scripts/: run-sample-benchmark.sh  verify-local.sh  verify-sample.sh
tests/: test_embed.py  test_gate.py  test_report.py
